24-project-II/kubernetes/old/nginx-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80   # This is the port NGINX listens on
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf  # Path where NGINX expects its config file
              subPath: nginx.conf  # Reference the key in the ConfigMap
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config  # Reference the ConfigMap created above
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - port: 7800      # The port that will be exposed
      targetPort: 80  # Maps to the port NGINX listens on inside the container
